--- a/app/styles/timeline.css
+++ b/app/styles/timeline.css
@@ -77,6 +77,7 @@
 .progressbar .marker {
 	position: absolute;
 	height: 1em;
+	cursor: default;
 }
 .progressbar .buffered {
 	background-color: #FFF;
