--- a/app/styles/typography.css
+++ b/app/styles/typography.css
@@ -129,7 +129,6 @@ a {
 }
 .typographyGw .item .pullquote:before {
 	font-family: "Cardo", serif;
-	font-size: 2.5em;
 }
 .typographyUsc {
 	font-family: National, "Helvetica Neue", Helvetica, Arial, sans-serif;
